src/app/component/home/home.component.scss
@import "../../../variables";

.event-wrapper {
  background: var(--light-grey);
  padding: 20px;

  .event-list {
    margin-bottom: -20px;
  }
  .event {
    margin-bottom: 20px;
    display: block;
  }
}

.matches .more-matches {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  padding-top: 20px;
}

@media screen and (max-width: $desktop) {
  [class*="sos-flex"] > .cell-1of3 {
    flex-basis: 50%;
  }

  [class*="sos-flex"] > .cell-2of3.social {
    flex-basis: 100%;
  }
}

@media screen and (max-width: $phone) {
  [class*="sos-flex"] > .cell-1of3 {
    flex-basis: 100%;
  }

  .matches {
    padding: 0;

    .title {
      margin: 0 var(--page-gutter-width) var(--h2-margin-bottom);
    }

    [class*="sos-flex"].has-gutter {
      margin-left: 0;
      margin-right: 0;

      & > * {
        padding-left: 0;
        padding-right: 0;
      }
    }

    .cell-1of3 {
      flex-basis: 100%;
    }
  }

  .more-matches {
    display: flex;
    justify-content: center;
    align-items: center;

    padding-top: 20px;
    padding-bottom: 40px;
  }

}

